# tealc

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: linux-package.yml
modelling/: .gitignore  README.md
modelling/charts/: nps_large.csv
modelling/src/: coefficients.py  readme.py  readme_top.md  tenscalc_modelling.ipynb
tealc/: __init__.py  cli.py  manual.txt  tealc.py
tenscalc/: __init__.py  __main__.py  cli.py  common.py  manual.1  manual.md  manual.txt  material_codes.json  tenscalc.py  tension_coefs.json  test_tenscalc.py  testdata.json  unit_weights.json
tenscalc/data/: manual.txt  material_codes.json  testdata.json  unit_weights.json  unit_weights.py
tenscalc/data/charts/: fw.csv
tests/: test_StringSet.py  test_StringTension.py  test_cli.py  test_tenscalc.py
tests/data/: bass_string_data.toml  string_data.toml
tests/data/SetFiles/: 3025  3050  5l  5m  5ml  6ml  bb10u  bb20x  bb30l  bb40m  bb50h  cm3050  cm5000  fw1000  fw750  fw800  fw900  gb105  gb85  gb95  gbcl  gbh  gbl  gblxl  gbm  gbtm  gbtnt  gbul  gbxl  h3045  l3045  l5000  m3045  m3050  m3050x-5  m5000  ml3045  ml5000  rejl  rejm  (+19 more)
