[metadata]
name = tenscalc
version = 0.1.0
author = David E. Lambert
author_email = david@davidelambert.com
description = Tension estimator for stringed instruments.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
url = https://github.com/davidelambert/tenscalc
project_urls = 
    Bug Tracker = https://github.com/davidelambert/tenscalc/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir = 
    = tenscalc
packages = find:
python_requires = >=3.7

[options.packages.find]
where = tenscalc

[options.entry_points]
console_scripts = 
    tenscalc = cli:main